--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "baseUrl": "./src",
     "incremental": true,
     "skipLibCheck": true
-
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
